changed ibuycrap directory to work better on mobile

--- a/_data/menucrap.yml
+++ b/_data/menucrap.yml
@@ -1,7 +1,7 @@
-- name: Music Collection
+- name: Music
   url: /ibuycrap/music/
 
-- name: Video Collection
+- name: Video
   url: /ibuycrap/video/
 
 - name: Other
